--- a/css/main.scss
+++ b/css/main.scss
@@ -1,4 +1,4 @@
-﻿---
+---
 ---
 @charset "utf-8";
 
@@ -14,7 +14,7 @@ $spacing-unit:     30px;
 
 $text-color:       #454545;
 $background-color: #FFF;
-$brand-color:      #000000;
+$brand-color:      #00B2EE;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 30%);
