--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -3,6 +3,7 @@
     .site-header {
         min-height: 450px;
         background-color: $brand-color;
+        background-image: url('');
         background-size: cover;
         background-position: center -170px;
         background-attachment: fixed;
