--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -14,6 +14,9 @@ a {
   text-decoration: none; }
   a:hover {
     text-decoration: underline; }
+    
+.gh-logo {
+    vertical-align: middle; }
 
 .btn {
   display: inline-block;
