Made class for link
To fix the colors and stuff

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -16,7 +16,8 @@ a {
     text-decoration: underline; }
     
 .gh-logo {
-    vertical-align: middle; }
+    vertical-align: middle;
+    padding-right: 5px; }
 
 .btn {
   display: inline-block;
@@ -30,12 +31,23 @@ a {
   transition: color 0.2s, background-color 0.2s, border-color 0.2s; }
   .btn + .btn {
     margin-left: 1rem; }
+    
+.btn>.btnlink {
+  vertical-align: middle;
+  color: rgba(255, 255, 255, 0.7);
+  transition: color 0.2s; }
 
 .btn:hover {
   color: rgba(255, 255, 255, 0.8);
   text-decoration: none;
   background-color: rgba(255, 255, 255, 0.2);
-  border-color: rgba(255, 255, 255, 0.3); }
+  border-color: rgba(255, 255, 255, 0.3);
+}
+
+.btn:hover>.btnlink {
+  color: rgba(255, 255, 255, 0.8);
+  text-decoration: none;
+}
 
 @media screen and (min-width: 64em) {
   .btn {
