--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -14,6 +14,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: "Inconsolata", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   color: #606c71; }
