--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -18,6 +18,11 @@ body {
   font-size: 16px;
   line-height: 1.5;
   color: #606c71; }
+  
+.teamivan {
+  font-family: "wendy", "Inconsolata", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #DCB03A;
+  margin: -0.67em 0 0.5em 0; }
     
 .gh-logo {
   vertical-align: middle; }
