--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -21,7 +21,7 @@ body {
   
 .teamivan {
   font-family: "wendy", "Inconsolata", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #DCB03A;
+  color: #e8ba3c;
   margin: -0.67em 0 0.5em 0; }
     
 .gh-logo {
@@ -91,15 +91,15 @@ a {
 
 @media screen and (min-width: 64em) {
   .page-header {
-    padding: 5rem 6rem; } }
+    padding: 2.5rem 6rem; } }
 
 @media screen and (min-width: 42em) and (max-width: 64em) {
   .page-header {
-    padding: 3rem 4rem; } }
+    padding: 1.5rem 4rem; } }
 
 @media screen and (max-width: 42em) {
   .page-header {
-    padding: 2rem 1rem; } }
+    padding: 1rem 1rem; } }
 
 .project-name {
   margin-top: 0;
