--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -18,7 +18,10 @@ body {
   font-size: 16px;
   line-height: 1.5;
   color: #606c71; }
-  
+
+.cursor {
+  margin-left: -17px; }
+
 .teamivan {
   font-family: "wendy", "Inconsolata", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #e8ba3c;
